added one line to center content on loginPanel

--- a/css/style.css
+++ b/css/style.css
@@ -891,6 +891,11 @@
       }
     }
   /*----*/
-  
+    
+  @media (min-height: 840px) {
+    #loginContent{
+      align-items: center;
+    }
+  }
 /*----*/
     
