--- a/css/style.css
+++ b/css/style.css
@@ -99,10 +99,6 @@
       padding: 0;
       font-family: 'Century Gothic';
     }
-
-
-    
-    
     
     body {
       background: var(--whitesmoke-color);
@@ -281,12 +277,12 @@
       width: 30px;
       height: 30px;
       font-size: 0;
-      
     }
 
     .userName.button.logged{
       pointer-events: none;
       background-color: transparent;
+      text-transform: none;
     }
 
     .userName.button svg{
@@ -722,11 +718,15 @@
       } 
 
       .userName.button{
-        font-size: calc(0.75em + 0.2vh);
+        font-size: 0.9em;
         width: auto;
         height: auto;
         text-transform: uppercase;
         padding: 5px 7px;
+      }
+
+      .userName.button.logged{
+        font-size: 1.2em;
       }
 
       .loginTitle{
@@ -744,7 +744,7 @@
       label[for=email] span,
       label[for=birthdate] span{
         font-size: 1em;
-        top: 8px;
+        top: 5px;
       }
   
       label[for=usernameL] span.top,
@@ -772,6 +772,8 @@
         .userName.button svg{
           display:block;
         }
+
+      
 
         header{
           height: 60px;
@@ -817,7 +819,7 @@
         #userOpt {
           line-height: 25px;
           position: absolute;
-          bottom: 20px;
+          bottom: 30px;
         }
       /*----*/
     
