wip lineAndTravelR,php v2

--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@
       pointer-events: none;
       background-color: transparent;
       text-transform: none;
+      color: var(--primary-color);
     }
 
     .userName.button svg{
