--- a/css/style.css
+++ b/css/style.css
@@ -134,11 +134,22 @@
     }
 
     main {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        width: 100%
-      }
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      width: 100%;
+      align-items: center;
+    }
+
+    .container {
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
+    }
+    
+      
       
   
   /*----*/
@@ -253,6 +264,7 @@
       background: var(--white-color);
       box-shadow: 0 5px 15px var(--shadow-color);
       overflow: hidden;
+      z-index: 100000;
     }
     
     nav {
@@ -300,12 +312,13 @@
       display: flex;
       padding: 20px;
       transition: 0.5s;
+     
     }
 
     .menu.active {
         right: 0px;
         background-color: var(--white-color);
-        transition: 0.5s;
+        transition: 0.5s;;
       }
   
       .menuOpt {
@@ -704,6 +717,108 @@
     }
   /*----*/
     
+/*----*/
+
+/*-- lineAndTravelR --*/
+  .container.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  h2.title{
+    color: var(--secondary-color);
+    margin-top: 2rem;
+    
+  }
+
+  .lineAndTravels{
+    background-color: var(--white-color);
+    width: 100%;
+    margin: 1rem;
+    padding: 1rem;
+    color: var(--primary-color);
+    border-radius: 5px;
+  }
+
+  .line{
+    width: 100%;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 15px 0 15px;
+    text-align: center;
+    transition: .25s;
+  }
+
+
+  .travels {
+    
+    max-height: 0px;
+    overflow-y: hidden;
+    display: flex;
+    justify-content: space-evenly;
+    transition: .25s; /* Agregamos la propiedad 'height' aquí */
+  }
+  
+  .lineAndTravels.active .travels {
+    padding-top: 1rem;
+    max-height: 1000px;
+  }
+
+  #lineToggle{
+    height: 30px;
+    width: 30px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 3px;
+  }
+
+  #lineToggle::before{
+    content: '';
+    position: absolute;
+    width: 14px;
+    height: 2px;
+    background-color: var(--primary-color);
+    transform: 
+     translateX(-2px)
+     translateY(13px)
+     rotate(-40deg); 
+    border-radius: 3px;
+    transition: 0.25s;
+  }
+
+  #lineToggle::after{
+    content: '';
+    position: absolute;
+    width: 14px;
+    height: 2px;
+    background-color: var(--primary-color);
+    transform: 
+     translateX(-12px)
+     translateY(13px)
+     rotate(40deg);
+    border-radius: 3px;
+    transition: 0.25s;
+  }
+
+  .lineAndTravels.active #lineToggle::before{
+    transform: 
+    translateX(-12px)
+    translateY(18px)
+    rotate(-40deg);
+  }
+
+  .lineAndTravels.active #lineToggle::after{
+    transform: 
+     translateX(-2px)
+     translateY(18px)
+     rotate(40deg); 
+  }
+
+
+
 /*----*/
   
 /*-- MovileFirst Design --*/
