--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@
     --ss-filter: saturate(0.9) brightness(35) hue-rotate(43deg);
     --backgroundImage: url(../img/EfectoFondo_Light.png);
     --white-transparentColor:rgba(13, 18, 24, 0.099);
+    --shadow-filter:drop-shadow(0.2rem 0.2rem 0.25rem rgba(20, 42, 74, 0.25));
   }
     
   @media (prefers-color-scheme: dark) {
@@ -59,6 +60,7 @@
       --ss-filter: saturate(0.9) brightness(40) hue-rotate(43deg);
       --backgroundImage: url(../img/EfectoFondo_Dark.png);
       --white-transparentColor:rgba(13, 18, 24, 0.211);
+      --shadow-filter:drop-shadow(0.2rem 0.2rem 0.25rem var(--shadow-color));
     }
    
   }
@@ -158,7 +160,7 @@
     }
     
     .shadow{
-      filter: drop-shadow(0.2rem 0.2rem .15rem rgba(34, 39, 46, 0.559));
+      filter: var(--shadow-filter);
     }
       
       
@@ -545,7 +547,7 @@
     
 
     .busImage {
-      width: max( 100%);
+      width: 100%;
       max-width: 1500px;
     }
 
@@ -859,6 +861,177 @@
 
 /*----*/
   
+/*-- accountSettings --*/
+
+  .container#user{
+    margin:2rem 0 1rem 0 ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color:var(--secondary-color);
+  }
+
+  .container#user svg{
+    height: 5rem;
+    width: 5rem;
+  }
+
+  .container#user p{
+    font-size: 1.5rem;
+  }
+
+
+  .container#form{
+    margin:1rem 0 1rem 0 ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color:var(--primary-color);
+  }
+
+  #accSettingsForm{
+    width: 100%;
+  }
+
+  .container#form label{
+    width: 100%;
+    border: 1px solid transparent;
+    background-color: var(--white-color);
+    margin-bottom: 1rem;
+    border-radius: 15px;
+    flex-direction: column;
+    cursor:default;
+  }
+  
+  .container#form label.editable{
+    border: 1px solid var(--primary-color);
+    background-color: var(--whitesmoke-color);
+  }
+
+  .container#form label span{
+  
+    padding: 5px 0 5px 0;
+    position: static;
+  
+  }
+
+  .container#form label input{
+    cursor:default;
+  }
+
+  .container#form label.editable input{
+    cursor:text;
+  }
+
+
+  .container#form label svg{
+    position: absolute;
+    right: 10px;
+    top: 30%;
+    cursor:pointer;
+  }
+
+  .container#form label.editable svg{
+    display: none;
+  }
+
+
+  .container#form .passwordSection{
+    width: 100%;
+    padding:15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px;
+  }
+
+  .container#form .passwordSection.active{
+    background-color: var(--white-color);
+    transition: .5s;
+  }
+
+  .container#form .passwordSection > .button{
+    font-size: 1rem;
+  }
+  .container#form .passwordSection > .button:hover{
+  transform: none;
+  }
+  
+  .container#form .passwordSection.active > .button{
+    pointer-events: none;
+    background-color: transparent;
+    color: var(--primary-color);
+    border-color: transparent;
+    font-size: 1rem;
+  }
+
+  .passwordSection.active #passwordCancel{
+    height: 30px;
+    width: 30px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 3px;
+    position: absolute;
+    right: 20px;
+  }
+
+  .passwordSection.active #passwordCancel::before{
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    background-color: var(--primary-color);
+    transform: 
+     translateX(2px)
+     translateY(14px)
+     rotate(45deg); 
+    border-radius: 3px;
+  }
+
+  .passwordSection.active #passwordCancel::after{
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    background-color: var(--primary-color);
+    transform: 
+     translateX(2px)
+     translateY(14px)
+     rotate(-45deg);
+    border-radius: 3px;
+  }
+
+  .container#form .passwordSection form{
+    max-height: 0px;
+    overflow-y: hidden;
+  }
+
+  .container#form .passwordSection.active form{
+    max-height: 500px;
+    height: fit-content;
+    transition: .5s;
+  }
+
+
+  .container#form .passwordSection form{
+    width: 100%;
+  }
+
+  #accSettingsForm input[type=submit]{
+    display:none;
+    font-size: 1em;
+  }
+
+  #accSettingsForm input[type=submit].shown{
+    display:block;
+  }
+
+
+
+/*----*/
 /*-- MovileFirst Design --*/
   
   /* xs */
