--- a/css/style.css
+++ b/css/style.css
@@ -7,24 +7,24 @@
     --shadow-color: rgb(119, 156, 204);
     --white-color: white;
     --whitesmoke-color: whitesmoke;
-    --footer-gradient-left: linear-gradient(
+    --footer-gradient-up: linear-gradient(
       180deg,
       rgb(40, 80, 134) 0%,
       rgb(54, 113, 190) 28.53%,
       rgb(95, 134, 189) 75.52%
     );
-    --footer-gradient-right: linear-gradient(
+    --footer-gradient-down: linear-gradient(
       180deg,
-      rgb(129, 100, 42) 0%,
+      rgb(203, 167, 120) 0%,
       rgb(190, 140, 54) 28.53%,
-      rgb(203, 167, 120) 75.52%
+      rgb(129, 100, 42) 75.52%
     );
     --image-filter-logo: none;
     --bar-color: rgb(31, 58, 93);
     --bar-border-color: rgb(20, 37, 59);
     --bar-background-color: rgb(169, 189, 217);
-    --left-text-color: rgb(147, 173, 207);
-    --right-text-color: rgb(218, 203, 173);
+    --top-text-color: rgb(255, 255, 255);
+    --bottom-text-color: rgb(149, 188, 238);
     --ss-filter: saturate(0.9) brightness(35) hue-rotate(43deg);
     --backgroundImage: url(../img/EfectoFondo_Light.png);
     --white-transparentColor:rgba(13, 18, 24, 0.099);
@@ -47,24 +47,24 @@
       --shadow-color: rgb(24, 27, 35);
       --white-color: rgb(32, 34, 40);
       --whitesmoke-color: rgb(29, 31, 37);
-      --footer-gradient-left: linear-gradient(
+      --footer-gradient-up: linear-gradient(
         180deg,
         rgb(31, 58, 93) 0%,
         rgb(34, 49, 73) 28.53%,
         rgb(23, 38, 53) 75.52%
       );
-      --footer-gradient-right: linear-gradient(
+      --footer-gradient-down: linear-gradient(
         180deg,
-        rgb(120, 98, 5) 0%,
-        rgb(90, 78, 2) 28.53%,
-        rgb(64, 56, 28) 75.52%
+        rgb(120, 84, 5) 0%,
+        rgb(90, 62, 2) 28.53%,
+        rgb(58, 44, 22) 75.52%
       );
       --image-filter-logo: grayscale(15%) opacity(80%) brightness(75%);
       --bar-color: rgb(31, 58, 93);
       --bar-border-color: rgb(20, 37, 59);
       --bar-background-color: rgb(32, 34, 40);
-      --left-text-color: rgb(140, 169, 210);
-      --right-text-color: rgb(218, 203, 173);
+      --top-text-color: rgb(140, 169, 210);
+      --bottom-text-color: rgb(153, 117, 45);
       --ss-filter: saturate(0.9) brightness(40) hue-rotate(43deg);
       --backgroundImage: url(../img/EfectoFondo_Dark.png);
       --white-transparentColor:rgba(13, 18, 24, 0.211);
@@ -125,6 +125,9 @@
     
       background-color: var(--bar-background-color);
     }
+    ul{
+      list-style: none;
+    }
   /*----*/
     
   /*-- GeneralSettings --*/
@@ -133,7 +136,7 @@
       box-sizing: border-box;
       margin: 0;
       padding: 0;
-      font-family: 'Century Gothic';
+      font-family: 'Century Gothic', Tahoma, sans-serif;
     }
 
     html{
@@ -390,7 +393,6 @@
         line-height: 3em;
         padding-left: 2.5vw;
         list-style: none;
-        text-transform: capitalize; 
         transition: 2s;
       }
       
@@ -466,7 +468,7 @@
     
     .menu.active .menuToggle::after {
       transform: translateY(0) rotate(-45deg);
-      box-shadow: 0 0px 0 var(--footer-gradient-left);
+      box-shadow: 0 0px 0 var(--footer-gradient-up);
     }
     
     .userName:hover {
@@ -481,100 +483,81 @@
   /*-- footer --*/
     
     footer {
-      display: flex;
-      background-color: var(--white-color);
-      height: fit-content;
-      width: 100%;
-      font-size: var(--font-xs);
-      margin-top: 40px;
-    }
-    .footerTitle {
-      font-size: 1.3em;
-      margin-bottom: 2vh;
-    }
-
-    .left {
+      box-shadow: 0 -5px 15px var(--shadow-color);
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: auto;
-      width: 60%;
-      background: var(--footer-gradient-left);
-      padding: 10px;
-      color: var(--left-text-color);
-      overflow: hidden;
+      justify-content: space-between;
+      background-color: var(--white-color);
+      width: 100%;
+      font-size: var(--font-xs);
+      margin-top: 40px;
+      color:var(--top-text-color);
     }
-    
+
+    #footerTop{
+
+      padding: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-evenly;
+      width: 100%;
+      text-align: center;
+      
+    }
+    .tel{
+      background: var(--footer-gradient-up);
+      border-radius: 15px;
+      padding: 10px;
+    }
+
     .socials {
       display: flex;
       align-items: center;
       justify-content: space-evenly;
-      margin-bottom: 3vh;
-  
+      gap: 5px;
     }
 
+    .socials li{
+      background:var(--footer-gradient-up);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 17px;
+      height: 10px;
+      width: 10px;
+    }
+
+    .socials li a{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    
     .socialImg {
-      height: 40px;
-      margin-right: 2vw;
-      stroke:var(--left-text-color);
+    
+      stroke:var(--top-text-color);
       
     }
 
     .copyright{
+      width: 100%;
+      margin-top: 3px;
+      padding-top: 3px;
+      background: var(--footer-gradient-up);
+      transform: rotate(180deg);
+      color: var(--bottom-text-color);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: space-evenly;
       text-align: center;
     }
-    
-    .right {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      height: auto;
-      width: 40vw;
-      background: var(--footer-gradient-right);
-      padding: 4vh;
-      color: var(--right-text-color);
-      overflow: hidden;
-      text-align: center;
-    }
-    
-    .SStext {
-      font-size: var(--font-1-5);
-      font-weight: 600;
-      margin-bottom: 2vh;
-      display: flex;
-      align-items: center;
-      justify-content: space-evenly;
 
-    }
-
-    .SSlogo {
-      margin-bottom: 10px;
-      height: 40px;
-      width: 40px;
-      fill: var(--right-text-color);
-    }
-    
-    .errorInfo {
-      text-decoration: none;
-      color: var(--right-text-color);
-      font-weight: 600;
-      align-self: center;
-      transition: 0.5s;
-    }
-    
-    .errorInfo:hover {
-      transform: translateX(8px);
-      filter: brightness(2);
-      transition: 0.5s;
-    }
-    
-    .tel {
-      margin-bottom: 3vh;
+    .copyright *{
+      transform: rotate(180deg);
     }
 
   /*----*/
@@ -1075,7 +1058,7 @@
 
 
 /*-- lineAndTravelR --*/
-#stopAndSectionMap { 
+#stopsMap { 
   margin-top: 1.6rem;
   font-size: var(--font-xs);
   height: 75vh;
@@ -1085,7 +1068,7 @@
   cursor: pointer;
  }
 
- #stopAndSectionMap:active{
+ #stopsMap:active{
   cursor:grabbing
  }
 
@@ -1189,6 +1172,11 @@
   
   /* xs */
     @media (min-width: 475px) {
+      #footerTop{
+        justify-content: space-between;
+        padding: 10px 30px 10px 30px
+      }
+      
       .busImage {
         width: 100%;
         transform:none;
@@ -1288,7 +1276,6 @@
           padding-left: 2.5vw;
           line-height: 50px;
           list-style: none;
-          text-transform: capitalize; 
           transition: 2s;
         }
   
@@ -1332,19 +1319,6 @@
       .container {
         max-width: 768px;
       }
-      /*-- Footer --*/
-
-        footer{
-          font-size: 1em;
-        }
-
-        .socialImg,
-        .SSlogo{
-          height: 40px;
-          width: 40px;
-        }
-
-      /*----*/
       /*-- Login --*/
         #loginPanel{
           width:75%;
@@ -1387,12 +1361,6 @@
   /*----*/
     
     
-  @media (min-height: 840px) {
-    #loginContent{
-      align-items: center;
-    }
-  }
-  
   @media (min-height: 840px) {
     #loginContent{
       align-items: center;
