--- a/css/style.css
+++ b/css/style.css
@@ -1133,7 +1133,8 @@
    translateY(14px);
   border-radius: 3px;
   transition: 0.25s;
-  filter:drop-shadow(0 0 0.25rem var(--secondary-color))
+  filter:drop-shadow(0 0 0.25rem var(--secondary-color));
+
 }
 
 .leaflet-popup-content .button .busIcons.slash::before{
@@ -1154,18 +1155,16 @@
 .leaflet-popup-content .button .busIcons.slash::after{
   content: '';
   position: absolute;
-  
   width: 10px;
   height: 10px;
   border: white 2px solid;
-  border-radius: 50% !important;
+  border-width: 2px;
+  border-radius: 50%;
   transform: 
    translateX(-8px)
    translateY(8px);
-  border-radius: 3px;
-  transition: 0.25s;
+  transition: 0.25s, border 0s;
   filter:drop-shadow(0 0 0.25rem var(--secondary-color));
- 
 }
 
 /*-- MovileFirst Design --*/
