--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,9 @@
   /*-- Animations --*/
   
   @keyframes slideIn {
+    
     0% {
+      display: block;
       transform: 
         translateX(-50%) 
         translateY(-200%)
