--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
     --top-text-color: rgb(255, 255, 255);
     --bottom-text-color: rgb(149, 188, 238);
     --ss-filter: saturate(0.9) brightness(35) hue-rotate(43deg);
-    --backgroundImage: url(../img/EfectoFondo_Light.png);
+    --backgroundImage: url(../img/EfectoFondo_Light.webp);
     --white-transparentColor:rgba(13, 18, 24, 0.099);
     --shadow-filter:drop-shadow(0.2rem 0.2rem 0.25rem rgba(20, 42, 74, 0.25));
     --font-xs: 1.2rem;
@@ -66,7 +66,7 @@
       --top-text-color: rgb(140, 169, 210);
       --bottom-text-color: rgb(153, 117, 45);
       --ss-filter: saturate(0.9) brightness(40) hue-rotate(43deg);
-      --backgroundImage: url(../img/EfectoFondo_Dark.png);
+      --backgroundImage: url(../img/EfectoFondo_Dark.webp);
       --white-transparentColor:rgba(13, 18, 24, 0.211);
       --shadow-filter:drop-shadow(0.2rem 0.2rem 0.25rem var(--shadow-color));
     }
@@ -127,12 +127,18 @@
     
       background-color: var(--bar-background-color);
     }
-    ul{
-      list-style: none;
+
+    body *::-webkit-scrollbar-track {
+    
+      border-radius: 20px;
     }
+    
   /*----*/
     
   /*-- GeneralSettings --*/
+  ul{
+    list-style: none;
+  }
     
     * {
       box-sizing: border-box;
@@ -548,10 +554,20 @@
       width: 10px;
     }
 
+    .socials li:hover{
+      background: transparent;
+    }
+
+
     .socials li a{
       display: flex;
       align-items: center;
       justify-content: center;
+    }
+
+    .socials li:hover a svg{
+      stroke:var(--primary-color);
+      transition: .25s;
     }
     
     .socialImg {
