working busLookUp and WIP travelAndLineRD

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
   --shadow-color: rgb(119, 156, 204);
   --white-color: white;
   --whitesmoke-color: whitesmoke;
+  --valid-color: rgb(157, 219, 157);
+  --notValid-color: rgb(227, 129, 129);
   --footer-gradient-up: linear-gradient(
     180deg,
     rgb(40, 80, 134) 0%,
@@ -35,6 +37,7 @@
   --font-lg: 2.4rem;
   --font-1-5: 1.5em;
   --font-double: 2em;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -69,6 +72,7 @@
     --backgroundImage: url(../img/EfectoFondo_Dark.webp);
     --white-transparentColor: rgba(13, 18, 24, 0.211);
     --shadow-filter: drop-shadow(0.2rem 0.2rem 0.25rem var(--shadow-color));
+
   }
 }
 
@@ -1324,7 +1328,9 @@ h2.title {
 .unitInfo p{
  color: var(--tertiary-color);
 }
-.unitInfo .subtitle{
+.unitInfo .subtitle,
+.desplegableContent .subtitle,
+.travelAndLine .subtitle{
   color: var(--secondary-color);
   text-align: center;
   font-weight: 600;
@@ -1415,6 +1421,16 @@ h2.title {
 
 .leaflet-bottom.leaflet-left .collapseButton a {
   color: var(--primary-color);
+
+}
+
+.leaflet-bottom.leaflet-left .leaflet-control > a.active{
+  color: var(--secondary-color);
+  background-color: var(--whitesmoke-color);
+  border-radius: 50%;
+  width: 21px;
+  height: 21px;
+  transition: .1s;
 }
 
 .leaflet-popup-content .button .busIcons {
@@ -1467,8 +1483,8 @@ h2.title {
 }
 
 
-.lineAndTravels.active .travels.travelAndLinePage{
-  max-height: 10000px;
+.lineAndTravels.active .travels.travelAndLine{
+  max-height: fit-content;
 }
 
 .lineAndTravels.travelAndLinePage #toggleArrow{
@@ -1492,6 +1508,126 @@ h2.title {
   color: var(--tertiary-color)
 }
 
+.caract {
+  display: flex;
+  justify-content: space-between;
+}
+
+.linesSubtitle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 30px  0 30px;
+}
+
+.linesSubtitle h3{
+  color: var(--secondary-color);
+  font-size: var(--font-md);
+}
+
+.lineActive{
+  background-color: var(--valid-color);
+}
+
+.lineNotActive{
+  background-color: var(--notValid-color);
+}
+
+.days{
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
+}
+
+.days section{
+  background-color: var(--whitesmoke-color);
+  border-radius: 15px;
+  padding: 5px;
+}
+
+
+/* The switch - the box around the slider */
+.switch {
+  width: 40px;
+  height: 26px;
+  min-width: fit-content;
+  border:none;
+  margin: 0;
+  margin-right: 5px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  cursor: pointer;
+  inset: 0;
+  background-color: var(--notValid-color);
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 2px;
+  bottom: 3px;
+  background-color: var(--white-color);
+  transition: .25s;
+}
+
+input:checked + .slider {
+  background-color: var(--valid-color);
+}
+
+
+
+input:checked + .slider:before {
+  transform: translateX(15px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 24px;
+}
+
+.slider.round:before {
+  border-radius: 24px;
+}
+
+.lineDays{
+  display: flex;
+  text-wrap:wrap;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 130px;
+  transition: .25s;
+  max-height: 40px;
+}
+
+.lineDays.active{
+  max-height: 500px;
+  flex-direction: column;
+  min-width: 130px;
+  gap: 5px;
+}
+
+.lineDays.active>*{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.lineDays svg{
+  height: 20px;
+}
 
 /*--  --*/
 
