added font to the project

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,13 @@ ul {
   list-style: none;
 }
 
+@font-face {
+  font-family: 'Century Gothic';
+  src: url('fonts/Century Gothic.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -145,6 +152,7 @@ ul {
 html {
   font-size: 62.5%;
 }
+
 
 body {
   background-image: var(--backgroundImage);
