--- a/css/style.css
+++ b/css/style.css
@@ -944,7 +944,8 @@ h2.title {
   width: 100%;
 }
 
-.container#form label {
+.container#form label,
+fieldset{
   width: 100%;
   border: 1px solid transparent;
   background-color: var(--white-color);
@@ -1691,6 +1692,36 @@ input:checked + .slider:before {
     top: -25px;
   }
 }
+
+.desplegableContent.container#form {
+  margin: 0px;
+}
+
+.desplegableContent.container#form label,
+fieldset{
+  background-color: var(--whitesmoke-color);
+}
+
+fieldset{
+  padding: min(7px, 1vh) 10px;;
+  max-width: 100%;
+}
+
+.container#form label svg.feather-plus{
+  top: auto;
+}
+
+#lineForm{
+  width: 100%;
+ 
+}
+
+#stopsList{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px
+}
+
 
 /*----*/
 
